--- a/src/pages/Home/home.styles.scss
+++ b/src/pages/Home/home.styles.scss
@@ -2,4 +2,25 @@
 	position: relative;
 	width: 100%;
 	height: inherit;
+
+	.swiper {
+		&-container {
+			position: relative;
+			width: 100% !important;
+			height: 100vh !important;
+		}
+
+		&-pagination-bullets {
+			right: 5rem !important;
+		}
+
+		&-pagination-bullet {
+			background-color: #ccc !important;
+			opacity: 1;
+
+			&-active {
+				background-color: #ffc300 !important;
+			}
+		}
+	}
 }
