--- a/src/components/slide/slide.styles.scss
+++ b/src/components/slide/slide.styles.scss
@@ -13,7 +13,17 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-			filter: brightness(70%);
+			filter: brightness(80%);
+		}
+
+		&--details {
+			position: absolute;
+			left: 4rem;
+			bottom: 0;
+			height: 30rem;
+			width: 50rem;
+			background-color: #000000;
+			z-index: 3;
 		}
 	}
 }
