--- a/src/components/Navigation/navigation.styles.scss
+++ b/src/components/Navigation/navigation.styles.scss
@@ -17,10 +17,18 @@
 		height: 100vh;
 		width: 50%;
 		backdrop-filter: blur(1rem);
+		transition: transform 0.4s ease;
 		background: rgba(0, 0, 0, 0.5);
-		transform: translateX(-100%);
-		backface-visibility: hidden;
+
 		z-index: -1;
+
+		&--open {
+			transform: translateX(0);
+		}
+
+		&--closed {
+			transform: translateX(-100%);
+		}
 	}
 
 	&__logo {
