--- a/src/components/Project-item/project-item.styles.scss
+++ b/src/components/Project-item/project-item.styles.scss
@@ -1,20 +1,37 @@
 .project__item {
-	display: grid;
-	grid-template-rows: 1fr 5rem;
+	position: relative;
+	height: 25rem;
+	overflow: hidden;
+	cursor: pointer;
 
-	&-footer {
-		display: grid;
-	}
-}
-.text {
-	&__bold {
-		color: #555;
-		font-size: 1.8rem;
-		font-weight: 700;
+	.img__thumbnail {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: bottom;
+		transition: all 0.3s ease;
 	}
 
-	&__light {
+	&--title {
+		position: absolute;
+		left: 1.5rem;
+		bottom: 1.5rem;
 		color: #fff;
-		font-size: 1.3rem;
+		opacity: 0;
+		transform: translateY(100%);
+		font-size: 1.5rem;
+		font-weight: 700;
+		transition: all 0.3s ease;
+	}
+
+	&:hover {
+		.img__thumbnail {
+			filter: brightness(30%);
+		}
+
+		.project__item--title {
+			opacity: 1;
+			transform: translateY(0);
+		}
 	}
 }
