brought in spirite svg added, footer section, defined a general modalReelState in redux

--- a/src/pages/Home/home.styles.scss
+++ b/src/pages/Home/home.styles.scss
@@ -8,6 +8,7 @@
 			position: relative;
 			width: 100% !important;
 			height: 100vh !important;
+			overflow: hidden;
 		}
 
 		&-pagination-bullets {
