--- a/src/components/Project-item/project-item.styles.scss
+++ b/src/components/Project-item/project-item.styles.scss
@@ -24,6 +24,51 @@
 		transition: all 0.3s ease;
 	}
 
+	.icon {
+		&__set {
+			position: absolute;
+			bottom: 1.5rem;
+			right: 1.5rem;
+			display: grid;
+			grid-row-gap: 1rem;
+			opacity: 0;
+			transition: all 0.3s ease;
+		}
+
+		&__holder {
+			display: grid;
+			grid-template-columns: auto 2rem;
+			align-content: center;
+			grid-column-gap: 1rem;
+			justify-items: end;
+			transition: all 0.3s ease;
+
+			svg {
+				display: inline-block;
+				height: 1.8rem;
+				width: 1.8rem;
+				fill: #bbb;
+			}
+
+			&:hover {
+				svg {
+					fill: #fff;
+				}
+
+				.icon__holder--text {
+					color: #fff;
+					opacity: 1;
+				}
+			}
+
+			&--text {
+				font-size: 1.3rem;
+				opacity: 0;
+				transition: all 0.3s ease;
+			}
+		}
+	}
+
 	&:hover {
 		.img__thumbnail {
 			filter: brightness(30%);
@@ -32,6 +77,10 @@
 		.project__item--title {
 			opacity: 1;
 			transform: translateY(0);
+		}
+
+		.icon__set {
+			opacity: 1;
 		}
 	}
 }
