--- a/src/components/Project-overview/project-overview.styles.scss
+++ b/src/components/Project-overview/project-overview.styles.scss
@@ -4,5 +4,23 @@
 		min-height: 50rem;
 		width: 136.8rem;
 		margin: 0 auto;
+
+		&-img {
+			position: relative;
+			width: 100%;
+			height: 50rem;
+
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+		}
 	}
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: #ffc300;
 }
