--- a/src/components/Navbar/navigation.styles.scss
+++ b/src/components/Navbar/navigation.styles.scss
@@ -17,7 +17,7 @@
 		height: 100vh;
 		width: 50%;
 		backdrop-filter: blur(1rem);
-		transition: transform 0.4s ease;
+		transform: translateX(-100%);
 		background: rgba(0, 0, 0, 0.5);
 
 		z-index: -1;
@@ -66,6 +66,12 @@
 			text-transform: uppercase;
 			text-decoration: none;
 			color: #ffc300;
+			opacity: 0;
+			transition: all 0.4s ease-in-out;
+
+			&:hover {
+				color: #fff;
+			}
 		}
 	}
 }
