--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,33 +1,49 @@
 .navigation {
 	position: absolute;
-	width: 100%;
-	height: 10rem;
-	padding: 0 4rem;
 	top: 0;
-
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	left: 0;
+	right: 0;
 	z-index: 2;
 
-	&__overlay {
+	&__wrapper {
+		position: relative;
+		height: 10rem;
+		width: 100%;
+		padding: 0 4rem;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	&__drawer {
 		position: fixed;
 		top: 0;
-		left: 0;
-		height: 100vh;
-		width: 50%;
-		backdrop-filter: blur(1rem);
-		transform: translateX(-100%);
-		background: rgba(0, 0, 0, 0.5);
+		right: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #000;
+		z-index: 2;
+		padding: 0 4rem;
 
-		z-index: -1;
+		display: grid;
+		grid-template-rows: 10rem 1fr 10rem;
+		transform: translateY(-100%);
 
-		&--open {
-			transform: translateX(0);
+		&--closeBtn {
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+
+			img {
+				cursor: pointer;
+				opacity: 0;
+			}
 		}
 
-		&--closed {
-			transform: translateX(-100%);
+		&--footer {
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
 		}
 	}
 
@@ -52,25 +68,23 @@
 		position: relative;
 		list-style: none;
 		align-self: center;
+		padding: 0 10rem;
 
-		padding: 0 1rem;
-		backface-visibility: hidden;
+		display: grid;
+		grid-row-gap: 1rem;
 	}
 
 	&__item {
-		font-size: 4rem;
+		font-size: 10rem;
 		font-weight: 900;
 
 		&--link {
+			display: inline-block;
 			text-transform: uppercase;
 			text-decoration: none;
 			color: #ffc300;
 			opacity: 0;
 			transition: all 0.4s ease-in-out;
-
-			&:hover {
-				color: #fff;
-			}
 		}
 	}
 }
