--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,4 +25,22 @@ html {
 body {
 	font-family: "Roboto", sans-serif;
 	background-color: #000;
+	letter-spacing: 0.06rem;
+	line-height: 1.2;
+}
+
+// typography
+.heading {
+	&__primary {
+		font-family: "Roboto", sans-serif;
+		font-size: 3rem;
+		font-weight: 700;
+		color: #fff;
+	}
+}
+
+.paragraph {
+	font-family: "Roboto", sans-serif;
+	font-size: 1.75rem;
+	color: #777;
 }
