--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,7 +25,7 @@ html {
 body {
 	font-family: "Roboto", sans-serif;
 	background-color: #000;
-	letter-spacing: 0.06rem;
+	letter-spacing: 0.04rem;
 	line-height: 1.2;
 }
 
@@ -36,11 +36,29 @@ body {
 		font-size: 3rem;
 		font-weight: 700;
 		color: #fff;
+		margin-bottom: 2rem;
+	}
+
+	&__tertiary {
+		font-family: "Roboto", sans-serif;
+		color: #ffc300;
+		text-transform: uppercase;
+		font-size: 2rem;
+		margin-bottom: 1rem;
 	}
 }
 
 .paragraph {
-	font-family: "Roboto", sans-serif;
-	font-size: 1.75rem;
+	font-family: "Barlow", sans-serif;
+	font-size: 1.6rem;
+
 	color: #777;
+	margin-bottom: 1rem;
+	text-align: justify;
+	line-height: 1.3;
+
+	span {
+		text-transform: uppercase;
+		color: #fff;
+	}
 }
