--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -29,7 +29,7 @@
 		grid-template-rows: 10rem 1fr 10rem;
 		transform: translateY(-100%);
 
-		&--closeBtn {
+		&--header {
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
@@ -37,6 +37,26 @@
 			img {
 				cursor: pointer;
 				opacity: 0;
+			}
+		}
+
+		&--main {
+			display: grid;
+			padding: 0 4rem;
+			grid-template-columns: 2fr 1fr;
+
+			.navigation {
+				&__content {
+					display: grid;
+					align-content: center;
+					justify-items: right;
+
+					&--info {
+						p {
+							text-align: end;
+						}
+					}
+				}
 			}
 		}
 
@@ -68,7 +88,6 @@
 		position: relative;
 		list-style: none;
 		align-self: center;
-		padding: 0 10rem;
 
 		display: grid;
 		grid-row-gap: 1rem;
