--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,64 +1,16 @@
 // local imports
-@import "pages/home.scss";
-@import "pages/work.scss";
-@import "pages/about.scss";
+
+@import "base/base.scss";
+
 @import "components/navigation.scss";
 @import "components/slide.scss";
 @import "components/project-overview.scss";
 @import "components/project-collections.scss";
 @import "components/project-item.scss";
+@import "components/modal.scss";
 @import "components/footer.scss";
 
-*,
-*::before,
-*::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit;
-}
-
-html {
-	font-size: 62.5%;
-	box-sizing: border-box;
-}
-
-body {
-	font-family: "Roboto", sans-serif;
-	background-color: #000;
-	letter-spacing: 0.04rem;
-	line-height: 1.2;
-}
-
-// typography
-.heading {
-	&__primary {
-		font-family: "Roboto", sans-serif;
-		font-size: 3rem;
-		font-weight: 700;
-		color: #fff;
-		margin-bottom: 2rem;
-	}
-
-	&__tertiary {
-		font-family: "Roboto", sans-serif;
-		color: #ffc300;
-		text-transform: uppercase;
-		font-size: 2rem;
-		margin-bottom: 1rem;
-	}
-}
-
-.paragraph {
-	font-family: "Barlow", sans-serif;
-	font-size: 1.6rem;
-
-	color: #777;
-	margin-bottom: 1rem;
-	text-align: justify;
-	line-height: 1.3;
-
-	span {
-		text-transform: uppercase;
-		color: #fff;
-	}
-}
+@import "pages/home.scss";
+@import "pages/work.scss";
+@import "pages/about.scss";
+@import "pages/contact.scss";
