--- a/src/styles/components/project-item.scss
+++ b/src/styles/components/project-item.scss
@@ -1,82 +1,86 @@
 .project__item {
 	position: relative;
-	height: 25rem;
+	height: 29rem;
+	display: grid;
+	grid-template-rows: 25rem 4rem;
 	overflow: hidden;
-	cursor: pointer;
 
-	.img__thumbnail {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: bottom;
-		transition: all 0.3s ease;
-	}
+	&--thumbnailImgContainer {
+		position: relative;
+		cursor: pointer;
 
-	&--title {
-		position: absolute;
-		left: 1.5rem;
-		bottom: 1.5rem;
-		color: #fff;
-		opacity: 0;
-		transform: translateY(100%);
-		font-size: 1.5rem;
-		font-weight: 700;
-		transition: all 0.3s ease;
-	}
-
-	.icon {
-		&__set {
-			position: absolute;
-			bottom: 1.5rem;
-			right: 1.5rem;
-			display: grid;
-			grid-row-gap: 1rem;
-			opacity: 0;
+		.img__thumbnail {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: bottom;
 			transition: all 0.3s ease;
 		}
 
-		&__holder {
-			display: grid;
-			grid-template-columns: auto 2.5rem;
-			align-content: center;
-			grid-column-gap: 1rem;
-			justify-items: end;
-			transition: all 0.3s ease;
-
-			svg {
-				display: inline-block;
-				height: 2.3rem;
-				width: 2.3rem;
-				fill: #bbb;
-			}
-
-			&:hover {
-				svg {
-					fill: #fff;
-				}
-
-				.icon__holder--text {
-					color: #fff;
-					opacity: 1;
-				}
-			}
-
-			&--text {
-				font-size: 1.3rem;
+		.icon {
+			&__set {
+				position: absolute;
+				bottom: 1.5rem;
+				right: 1.5rem;
+				display: grid;
+				grid-row-gap: 1rem;
 				opacity: 0;
 				transition: all 0.3s ease;
 			}
+
+			&__holder {
+				display: grid;
+				grid-template-columns: auto 2.5rem;
+				align-content: center;
+				grid-column-gap: 1rem;
+				justify-items: end;
+				transition: all 0.3s ease;
+
+				svg {
+					display: inline-block;
+					height: 2.3rem;
+					width: 2.3rem;
+					fill: #bbb;
+				}
+
+				&:hover {
+					svg {
+						fill: #fff;
+					}
+
+					.icon__holder--text {
+						color: #fff;
+						opacity: 1;
+					}
+				}
+
+				&--text {
+					font-size: 1.3rem;
+					opacity: 0;
+					transition: all 0.3s ease;
+				}
+			}
 		}
+	}
+
+	&--title {
+		position: relative;
+		letter-spacing: 0.05rem;
+		display: block;
+		color: #fff;
+		// text-transform: uppercase;
+		font-family: $font-body;
+		font-size: 1.5rem;
+		font-weight: 600;
+
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 	}
 
 	&:hover {
 		.img__thumbnail {
 			filter: brightness(30%);
-		}
-
-		.project__item--title {
-			opacity: 1;
-			transform: translateY(0);
 		}
 
 		.icon__set {
