--- a/src/styles/components/project-overview.scss
+++ b/src/styles/components/project-overview.scss
@@ -1,4 +1,4 @@
-.work {
+.project {
 	&__content {
 		position: relative;
 		min-height: 50rem;
@@ -8,13 +8,74 @@
 		&-img {
 			position: relative;
 			width: 100%;
-			height: 50rem;
+			height: 65rem;
 
 			img {
 				display: block;
 				width: 100%;
 				height: 100%;
 				object-fit: contain;
+			}
+		}
+	}
+
+	&__details {
+		position: relative;
+		margin: 7.5rem 0;
+		padding: 2rem 8rem;
+		min-height: 20rem;
+
+		display: flex;
+		justify-content: space-between;
+
+		.credits {
+			display: grid;
+			grid-row-gap: 1.5rem;
+
+			&__container {
+				h4 {
+					font-family: $font-body;
+					font-weight: 400;
+					font-size: 1.5rem;
+					color: $white;
+				}
+
+				span {
+					font-family: $font-typography;
+					font-weight: 600;
+					font-size: 1.6rem;
+					color: $primary-grey;
+				}
+			}
+		}
+
+		.label {
+			display: grid;
+			align-content: start;
+			grid-row-gap: 1rem;
+
+			&__holder {
+				display: grid;
+				grid-template-columns: auto 2.5rem;
+				align-content: center;
+				grid-column-gap: 1rem;
+				justify-items: end;
+
+				&--text {
+					display: flex;
+					align-items: center;
+					font-size: 1.3rem;
+					color: $white;
+					cursor: pointer;
+				}
+
+				svg {
+					display: inline-block;
+					height: 2.3rem;
+					width: 2.3rem;
+					fill: #bbb;
+					cursor: pointer;
+				}
 			}
 		}
 	}
