--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -36,7 +36,6 @@
 
 			img {
 				cursor: pointer;
-				opacity: 0;
 			}
 		}
 
@@ -92,20 +91,23 @@
 		align-self: center;
 
 		display: grid;
-		grid-row-gap: 1rem;
+		grid-row-gap: 2rem;
 	}
 
 	&__item {
-		font-size: 10rem;
+		position: relative;
+		font-size: 13rem;
 		font-weight: 900;
+		line-height: 1;
+		height: 13rem;
 
 		&--link {
+			position: absolute;
 			display: inline-block;
 			text-transform: uppercase;
 			text-decoration: none;
 			color: #ffc300;
 			opacity: 0;
-			transition: all 0.4s ease-in-out;
 		}
 	}
 }
