--- a/src/styles/components/project-item.scss
+++ b/src/styles/components/project-item.scss
@@ -1,8 +1,9 @@
 .project__item {
 	position: relative;
-	height: 29rem;
+	height: 30rem;
 	display: grid;
 	grid-template-rows: 25rem 4rem;
+	grid-row-gap: 1rem;
 	overflow: hidden;
 
 	&--thumbnailImgContainer {
@@ -66,16 +67,23 @@
 	&--title {
 		position: relative;
 		letter-spacing: 0.05rem;
-		display: block;
-		color: #fff;
-		// text-transform: uppercase;
-		font-family: $font-body;
-		font-size: 1.5rem;
-		font-weight: 600;
+		display: grid;
+		width: 100%;
 
-		display: flex;
-		justify-content: flex-start;
-		align-items: center;
+		font-family: $font-body;
+
+		.title {
+			font-weight: 500;
+			color: $primary-grey;
+			font-size: 1.4rem;
+		}
+
+		.company {
+			color: #fff;
+			text-transform: uppercase;
+			font-weight: 600;
+			font-size: 1.5rem;
+		}
 	}
 
 	&:hover {
