--- a/src/styles/components/project-overview.scss
+++ b/src/styles/components/project-overview.scss
@@ -17,42 +17,29 @@
 				object-fit: contain;
 			}
 		}
-	}
 
-	&__details {
-		position: relative;
-		margin: 7.5rem 0;
-		padding: 2rem 8rem;
-		min-height: 20rem;
+		.video__icon {
+			position: absolute;
+			bottom: 2rem;
+			right: 13rem;
+			height: 3rem;
+			width: 3rem;
+			cursor: pointer;
 
-		display: flex;
-		justify-content: space-between;
-
-		.credits {
-			display: grid;
-			grid-row-gap: 1.5rem;
-
-			&__container {
-				h4 {
-					font-family: $font-body;
-					font-weight: 400;
-					font-size: 1.5rem;
-					color: $white;
-				}
-
-				span {
-					font-family: $font-typography;
-					font-weight: 600;
-					font-size: 1.6rem;
-					color: $primary-grey;
-				}
+			svg {
+				display: inline-block;
+				height: 100%;
+				fill: $primary-grey;
+				width: 100%;
+				transition: all 0.4s ease-in-out;
 			}
 		}
 
 		.label {
 			display: grid;
 			align-content: start;
-			grid-row-gap: 1rem;
+			grid-row-gap: 1.5rem;
+			margin: 5rem 11rem;
 
 			&__holder {
 				display: grid;
@@ -75,6 +62,58 @@
 					width: 2.3rem;
 					fill: #bbb;
 					cursor: pointer;
+				}
+			}
+		}
+	}
+
+	&__details {
+		position: relative;
+		margin: 0 10rem;
+		border-top: 0.5px solid rgb(37, 37, 37);
+		border-bottom: 0.5px solid rgb(37, 37, 37);
+
+		.accordion {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			position: relative;
+			margin: 2rem 0;
+			cursor: pointer;
+
+			&__btn {
+				position: relative;
+				height: 3rem;
+				width: 3rem;
+
+				svg {
+					fill: $primary-grey;
+					height: 100%;
+					width: 100%;
+				}
+			}
+		}
+
+		.credits {
+			display: grid;
+			grid-row-gap: 1.5rem;
+			margin: 0;
+			max-height: 0px;
+			visibility: hidden;
+
+			&__container {
+				h4 {
+					font-family: $font-body;
+					font-weight: 400;
+					font-size: 1.5rem;
+					color: $white;
+				}
+
+				span {
+					font-family: $font-typography;
+					font-weight: 600;
+					font-size: 1.6rem;
+					color: $primary-grey;
 				}
 			}
 		}
