project overview video functionality implemetation

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -17,6 +17,17 @@ $font-typography: "Barlow", sans-serif;
 html {
 	font-size: 62.5%;
 	box-sizing: border-box;
+
+	&::-webkit-scrollbar {
+		appearance: none;
+		width: 1rem;
+		background-color: #111;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 4px;
+		background-color: #333;
+	}
 }
 
 body {
@@ -30,9 +41,10 @@ body {
 .heading {
 	&__primary {
 		font-family: $font-body;
-		font-size: 3rem;
-		font-weight: 700;
+		font-size: 4rem;
+		font-weight: 900;
 		color: $primary-yellow;
+		text-transform: uppercase;
 		margin-bottom: 3rem;
 		line-height: 1.3;
 	}
@@ -59,5 +71,22 @@ body {
 		text-transform: uppercase;
 		font-weight: 700;
 		color: $white;
+	}
+}
+
+.btn {
+	display: inline-block;
+	font-size: 1.5rem;
+	color: #ffc300;
+	text-decoration: none;
+	padding: 1rem 2.5rem;
+	border: 1px solid #ffc300;
+	border-radius: 4px;
+	transition: all 0.3s ease-in-out;
+
+	&:hover,
+	&:focus {
+		color: $white;
+		border-color: $white;
 	}
 }
