--- a/src/styles/components/project-overview.scss
+++ b/src/styles/components/project-overview.scss
@@ -1,9 +1,12 @@
 .project {
+	position: relative;
+	min-height: 92vh;
+	width: 136.8rem;
+	margin: 0 auto;
+
 	&__content {
-		position: relative;
-		min-height: 50rem;
-		width: 136.8rem;
-		margin: 0 auto;
+		width: 100%;
+		height: 100%;
 
 		&-img {
 			position: relative;
@@ -18,52 +21,70 @@
 			}
 		}
 
-		.video__icon {
-			position: absolute;
-			bottom: 2rem;
-			right: 13rem;
-			height: 3rem;
-			width: 3rem;
-			cursor: pointer;
+		&-video {
+			position: relative;
+			width: 100%;
+			height: 65rem;
+		}
+	}
+
+	.label {
+		display: grid;
+		align-content: start;
+		grid-row-gap: 1.5rem;
+		margin: 5rem 11rem;
+
+		&__holder {
+			display: grid;
+			grid-template-columns: auto 2.5rem;
+			align-content: center;
+			grid-column-gap: 1rem;
+			justify-items: end;
+
+			&--text {
+				display: flex;
+				align-items: center;
+				font-size: 1.3rem;
+				color: $primary-grey;
+				cursor: pointer;
+				transition: all 0.4s ease-in-out;
+			}
 
 			svg {
 				display: inline-block;
-				height: 100%;
+				height: 2.3rem;
+				width: 2.3rem;
 				fill: $primary-grey;
-				width: 100%;
+				cursor: pointer;
 				transition: all 0.4s ease-in-out;
 			}
-		}
 
-		.label {
-			display: grid;
-			align-content: start;
-			grid-row-gap: 1.5rem;
-			margin: 5rem 11rem;
-
-			&__holder {
-				display: grid;
-				grid-template-columns: auto 2.5rem;
-				align-content: center;
-				grid-column-gap: 1rem;
-				justify-items: end;
-
-				&--text {
-					display: flex;
-					align-items: center;
-					font-size: 1.3rem;
+			&:hover {
+				.label__holder--text {
 					color: $white;
-					cursor: pointer;
 				}
 
 				svg {
-					display: inline-block;
-					height: 2.3rem;
-					width: 2.3rem;
-					fill: #bbb;
-					cursor: pointer;
+					fill: $white;
 				}
 			}
+		}
+	}
+
+	.video__icon {
+		position: absolute;
+		bottom: 2rem;
+		right: 13rem;
+		height: 3rem;
+		width: 3rem;
+		cursor: pointer;
+
+		svg {
+			display: inline-block;
+			height: 100%;
+			fill: $primary-grey;
+			width: 100%;
+			transition: all 0.4s ease-in-out;
 		}
 	}
 
@@ -81,6 +102,14 @@
 			margin: 2rem 0;
 			cursor: pointer;
 
+			&:hover {
+				.accordion__btn {
+					svg {
+						fill: $white;
+					}
+				}
+			}
+
 			&__btn {
 				position: relative;
 				height: 3rem;
@@ -90,6 +119,7 @@
 					fill: $primary-grey;
 					height: 100%;
 					width: 100%;
+					transition: all 0.4s ease-in-out;
 				}
 			}
 		}
