--- a/src/styles/components/project-item.scss
+++ b/src/styles/components/project-item.scss
@@ -1,14 +1,33 @@
 .project__item {
 	position: relative;
-	height: 30rem;
 	display: grid;
-	grid-template-rows: 25rem 4rem;
-	grid-row-gap: 1rem;
+	grid-row-gap: 0.5rem;
 	overflow: hidden;
 
 	&--thumbnailImgContainer {
 		position: relative;
 		cursor: pointer;
+		height: 25rem;
+
+		@include media("<=tablet") {
+			height: 25vw;
+		}
+
+		@include media(">1100px", "<laptop") {
+			height: 17rem;
+		}
+
+		@include media(">=laptop", "<1300px") {
+			height: 19rem;
+		}
+
+		@include media(">=1300px", "<desktop") {
+			height: 22rem;
+		}
+
+		@include media(">=LGdesktop") {
+			height: 27rem;
+		}
 
 		.img__thumbnail {
 			width: 100%;
@@ -69,13 +88,22 @@
 		letter-spacing: 0.05rem;
 		display: grid;
 		width: 100%;
+		height: 4rem;
 
 		font-family: $font-body;
+
+		@include media("<=phone") {
+			height: 3rem;
+		}
 
 		.title {
 			font-weight: 500;
 			color: $primary-grey;
 			font-size: 1.4rem;
+
+			@include media("<=450px") {
+				font-size: 1.1rem;
+			}
 		}
 
 		.company {
@@ -83,6 +111,14 @@
 			text-transform: uppercase;
 			font-weight: 600;
 			font-size: 1.5rem;
+
+			@include media(">450px", "<=phone") {
+				font-size: 1.3rem;
+			}
+
+			@include media("<=450px") {
+				font-size: 1rem;
+			}
 		}
 	}
 
