--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -122,12 +122,14 @@
 		align-items: center;
 		cursor: pointer;
 
-		img {
-			display: block;
-			width: 80%;
+		svg {
+			display: inline-block;
+			height: 8rem;
+			width: 8rem;
 
 			@include media("<=phone") {
-				width: 60%;
+				height: 5rem;
+				width: 5rem;
 			}
 		}
 	}
