--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -28,6 +28,10 @@ html {
 		border-radius: 100px;
 		background-color: #333;
 	}
+
+	@include media("<tablet") {
+		font-size: 56.5%;
+	}
 }
 
 body {
