--- a/src/styles/components/project-item.scss
+++ b/src/styles/components/project-item.scss
@@ -56,7 +56,7 @@
 				display: grid;
 				grid-template-columns: auto 2.5rem;
 				align-content: center;
-				grid-column-gap: 1rem;
+				grid-column-gap: 1.5rem;
 				justify-items: end;
 				transition: all 0.3s ease;
 
@@ -65,6 +65,11 @@
 					height: 2.5rem;
 					width: 2.5rem;
 					fill: #bbb;
+				}
+
+				.svg-gallery {
+					height: 2.7rem;
+					width: 2.7rem;
 				}
 
 				&:hover {
