--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -8,14 +8,34 @@
 		width: 144rem;
 	}
 
+	@include media("<desktop") {
+		width: 100%;
+	}
+
+	@include media(">1300px", "<desktop") {
+		padding: 0 10rem;
+	}
+
+	@include media(">1000px", "<1300px") {
+		padding: 0 7rem;
+	}
+
+	@include media(">phone", "<1000px") {
+		padding: 0 4rem;
+	}
+
 	&__content {
 		padding: 15rem 0;
+
+		@include media("<1300px") {
+			padding: 12rem 0;
+		}
 	}
 
 	&__story {
 		display: grid;
 		grid-template-columns: 1fr 2fr;
-		min-height: 55rem;
+		min-height: 55vh;
 	}
 
 	&__studio {
@@ -23,6 +43,10 @@
 		width: 100%;
 		height: 65rem;
 		margin-bottom: 10rem;
+
+		@include media("<laptop") {
+			height: 45rem;
+		}
 
 		video {
 			display: block;
@@ -90,6 +114,10 @@
 		font-weight: 400;
 		color: #ffc300;
 
+		@include media("<1300px") {
+			font-size: 1.3rem;
+		}
+
 		&:not(:last-child) {
 			margin-bottom: 1rem;
 		}
@@ -102,5 +130,18 @@
 	p {
 		padding-right: 20rem;
 		margin-bottom: 2rem;
+
+		@include media(">1300px", "<desktop") {
+			padding-right: 10rem;
+		}
+
+		@include media(">1000px", "<1300px") {
+			padding-right: 7rem;
+		}
+
+		@include media(">phone", "<1000px") {
+			padding-right: 4rem;
+			font-size: 1.4rem;
+		}
 	}
 }
