--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -56,8 +56,16 @@ body {
 			font-size: 3rem;
 		}
 
-		@include media("<1300px") {
+		@include media(">1000px", "<1300px") {
 			font-size: 2.7rem;
+		}
+
+		@include media(">phone", "<1000px") {
+			font-size: 2.3rem;
+		}
+
+		@include media("<=phone") {
+			font-size: 2rem;
 		}
 	}
 
