--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -76,6 +76,10 @@ body {
 		text-transform: uppercase;
 		font-size: 2rem;
 		margin-bottom: 1rem;
+
+		@include media("<=phone") {
+			font-size: 1.7rem;
+		}
 	}
 }
 
