--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -10,13 +10,48 @@
 		height: 10rem;
 		width: 100%;
 		padding: 0 4rem;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
 
 		@include media("<=phone") {
 			padding: 0 2rem;
 			height: 7rem;
+		}
+	}
+
+	&__logo {
+		position: relative;
+		justify-self: end;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+
+		svg {
+			display: inline-block;
+			height: 6rem;
+			width: 6rem;
+			box-sizing: border-box;
+
+			@include media("<=phone") {
+				height: 5rem;
+				width: 5rem;
+			}
+		}
+	}
+
+	&__menu {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		justify-self: flex-end;
+
+		svg {
+			display: inline-block;
+			fill: $primary-yellow;
+			height: 3rem;
+			width: 3rem;
+			cursor: pointer;
 		}
 	}
 
@@ -113,38 +148,5 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
-	}
-
-	&__logo {
-		position: relative;
-		display: flex;
-		justify-content: flex-start;
-		align-items: center;
-		cursor: pointer;
-
-		svg {
-			display: inline-block;
-			height: 8rem;
-			width: 8rem;
-
-			@include media("<=phone") {
-				height: 5rem;
-				width: 5rem;
-			}
-		}
-	}
-
-	&__menu {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		svg {
-			display: inline-block;
-			fill: $primary-yellow;
-			height: 3rem;
-			width: 3rem;
-			cursor: pointer;
-		}
 	}
 }
