--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -3,7 +3,8 @@
 	padding: 7.5rem 0;
 
 	&__title {
-		padding: 3rem 0;
+		padding: 6rem 0 3rem 0;
+		// padding: 3rem 0;
 		display: flex;
 		justify-content: center;
 
