changed contact page to career added career content with styling and changed document title

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,4 +13,4 @@
 @import "pages/home.scss";
 @import "pages/work.scss";
 @import "pages/about.scss";
-@import "pages/contact.scss";
+@import "pages/career.scss";
