--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -67,6 +67,10 @@ body {
 		@include media("<=phone") {
 			font-size: 2rem;
 		}
+
+		span {
+			text-transform: none !important;
+		}
 	}
 
 	&__tertiary {
